# CognitiveOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.gemini/: settings.json
.github/: release.yml
.github/workflows/: publish-github-release.yml  publish-pypi.yml
benchmark/: README.md  __init__.py  common.py  requirements.txt
benchmark/adapters/: __init__.py  canonical.py  cognitiveos_runtime.py  locomo.py  longmemeval.py  membench.py
benchmark/config/: provider.env.example  run.defaults.yaml
benchmark/manifests/: locomo.yaml  longmemeval.yaml  membench.yaml
benchmark/notes/: benchmark-caveats.md
benchmark/prompts/: abstention.md  answer_generation.md
benchmark/scripts/: __init__.py  prepare.py  run.py  validate.py
docs/: release-0.2-readiness.md
scripts/: check_0_2_readiness.py
skills/cognitiveos-memory-ops/: SKILL.md
src/cognitiveos/: __init__.py  __main__.py  background_jobs.py  collection_ingestion.py  config.py  document_ingestion.py  dream.py  exceptions.py  graph_governance.py  metadata_shapes.py  models.py  semantics.py  service.py
src/cognitiveos/benchmarks/: __init__.py  fixtures.py  runner.py
src/cognitiveos/cli/: __init__.py  app.py
src/cognitiveos/db/: __init__.py  connection.py  repository.py  schema.py
src/cognitiveos/extractors/: __init__.py  base.py  defaults.py
src/cognitiveos/mcp/: __init__.py  server.py
src/cognitiveos/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  local_huggingface.py  ollama.py  openai.py
tests/: test_benchmark_cli.py  test_benchmark_external_adapters.py  test_benchmark_external_smoke.py  test_benchmark_external_validate.py  test_cli.py  test_config.py  test_dream_entities.py  test_graph_governance.py  test_mcp_server.py  test_providers.py  test_service.py
(+1 files in other folders)
